# CrosswordDesigner

./: CMakeLists.txt  README.md  americanblankgrids.c
CrosswordDesigner/: AboutDialog.c  AboutDialog.h  AnagramFinderDlg.c  AnagramFinderDlg.h  ClueWin.c  ClueWin.h  CrosswordDesigner.aps  CrosswordDesigner.rc  GenWordListDialog.c  GenWordListDialog.h  GridWin.c  GridWin.h  HelpDialog.c  HelpDialog.h  Main.c  MyMessageBox.c  MyMessageBox.h  OpenFileDlg.c  OpenFileDlg.h  PrintCrossword.c  PrintCrossword.h  SettingsDialog.c  SettingsDialog.h  SizeDialog.c  SizeDialog.h  WaitDialog.c  WaitDialog.h  WordMatcherDlg.c  WordMatcherDlg.h  americanblankgrids.c  anneal.c  blankgrids.c  blankgrids.h  console.c  console.h  crossword.c  crossword.h  crosswordfromlist.c  crosswordfromlist.h  crosswordhtml.c  (+37 more)
docs/: AmericanGrid1.html  index.html
